--- a/Artifacts/A2.md
+++ b/Artifacts/A2.md
@@ -1,8 +1,8 @@
 # A2: Actors and User stories
 
-> The project consists in developing a global marketplace which specializes in the sale of gaming related digital products using redemption keys.
-> 
-> This artefact contais the specification of the actors and their user stories, it also serves as a lightweight documentation of the project's requirements and business rules.
+The project consists in developing a global marketplace which specializes in the sale of gaming related digital products using redemption keys.
+ 
+This artefact contais the specification of the actors and their user stories, it also serves as a lightweight documentation of the project's requirements and business rules.
 
 
 ## 1. Actors
@@ -19,9 +19,9 @@
 | Buyer                | Has the ability to buy, review and report sellers of purchased products.                                                                                                               | nightwalker739 |
 | Seller               | Is capable of listing products for buyers to buy.                                                                                                                                      | nightwalker739 |
 | Administrator        | Has the capacity to delete offensive reviews, update products' details, block certain users from selling and buying items, add games to the database, manage the reports made by users | admin          |
-| API user             | External user that has the possibility to obtain and change information on the website using get and post requests.                                                                    | External user  |
-| Paypal sandbox API   |        Allows the user to use paypal as a payment method to buy products on  the website.                                                                                                                                                                                |       paypal email and password         |
-| Google authentication API                      |     Allows the user to sign in with their own google account into the website.                                                                                                                                                                                        |      google email and password       |
+| API User             | External user that has the possibility to obtain and change information on the website using get and post requests.                                                                    | External User  |
+| Paypal Sandbox API   |        Allows the user to use paypal as a payment method to buy products on  the website.                                                                                                                                                                                |       Paypal Email and Password         |
+| Google Authentication API                      |     Allows the user to sign in with their own google account into the website.                                                                                                                                                                                        |      Google Email and Password       |
 
 ###### Table 1: Actor's description and examples
 
@@ -37,19 +37,16 @@
 | ---------- | -------------------------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | US01       | Browse                     | High     | As a user, I want to browse the website for products, so that I can see the all the products and prices.                                                  |
 | US02       | Search                     | High     | As a user, I want to search for a specific product, so that I can easily access to the product I'm looking for.                                           |
-| US03       | Sort                       | High     | As a user, I want to sort the list of products by price, date of release, popularity, so that I can more easily find desired products.                    |
+| US03       | Sort                       | Medium   | As a user, I want to sort the list of products by price, date of release, popularity, so that I can more easily find desired products.                    |
 | US04       | Check Reviews              | Medium   | As a user, I want to see the sellers reviews and feedback, so that I am aware if the seller is trusted.                                                   |
 | US05       | Search Restriction         | Medium   | As a user, I want to view products from a selected platform, category or/and genre, so that I can restrict the search results.                            |
-| US06       | Manage shooping cart items | Medium   | As a user, I want to be able to view, add and remove items from a shopping cart.                                                                          |
-| US07       | Buy shooping cart items    | Medium   | As a user, I want a shopping cart so that I can buy multiple products at the same time.                                                                   |
-| US08       | Save shooping cart items   | Medium   | As a user, I want my shopping cart to keep previously selected items, so that when I exit and comeback to the website the shopping cart remains the same. |
+| US06       | Shooping Cart Items        | Medium   | As a user, I want a shopping cart so that I can manage multiple products at the same time.                                                                |
+| US07       | Manage Shooping Cart Items | Medium   | As a user, I want to be able to view, add and remove items from a shopping cart.                                                                          |
+| US08       | Save Shooping Cart Items   | Medium   | As a user, I want my shopping cart to keep previously selected items, so that when I exit and comeback to the website the shopping cart remains the same. |
 | US09       | FAQ                        | Low      | As a user, I want to access the FAQ page, so that I can clarify some of my questions.                                                                     |
 | US10       | Sale                       | Low      | As a user, I want to view the products that are on sale, so that I can see if a product that I am interested in has a lower price.                        |
 
-
-
 ###### Table 2: User's user stories
-
 
 
 ### 2.2. Unauthenticated User
@@ -58,53 +55,56 @@
 | ---------- | ---- | -------- | --- |
 | US11      | Sign Up | High     | As an unauthenticated User, I want to be able to sign up, so that I can be an Authenticated User.  |
 | US12      | Login | High     | As an unauthenticated User, I want to be able to login, so that I can have the privileges of an Authenticated User.  |
-| US13      | Sign Up using external API | Low     | As an unauthenticated User, I want to be authenticated using an google account, so that I don't have to fill the sign up form.  |
-| US14      | Login using external API | Low     | As an unauthenticated User, I want to be authenticated using an google account, so that I don't have to fill the login form   |
+| US13      | Sign Up Using External API | Low     | As an unauthenticated User, I want to be authenticated using an google account, so that I don't have to fill the sign up form.  |
+| US14      | Login Using External API | Low     | As an unauthenticated User, I want to be authenticated using an google account, so that I don't have to fill the login form   |
 
 ###### Table 3: Unauthenticated User's user stories
-
 
 ### 2.3. Authenticated User
 
 | Identifier | Name | Priority | Description    |
 | ---------- | ---- | -------- | --- |
-| US21 | Logout | High | As an authenticated user, I want to be able to logout of the website so that I'm no longer logged in. |
-| US22 | Edit Profile | Medium | As an authenticated user, I want to be able to manage my personal account information, so that I can update my personal information. |
+| US15 | Logout | High | As an authenticated user, I want to be able to logout of the website so that I'm no longer logged in. |
+| US16 | Edit Profile | Medium | As an authenticated user, I want to be able to manage my personal account information, so that I can update my personal information. |
 
 ###### Table 4: Authenticated User's user stories
 
+<br/>
+<br/>
+<br/>
+<br/>
 
 ### 2.4. Buyer
 
-| Identifier | Name                       | Priority | Description                                                                                                                                            |
-| ---------- | -------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| US31       | Buying products            | High     | As a buyer, I want to be able to buy a product, so that i own it.                                                                                      |
-| US32       | Report the Seller          | Medium   | As a buyer, I want to be able to report a seller I bought a product from and had a problem so that the administrators are made aware of the situation. |
-| US33       | Past purchases             | Medium   | As a buyer, I want to see my past purchases, so that I know the details of each purchase                                                               |
-| US34       | Contact Seller             | Low      | As a buyer, I want to know the contact of a seller of a product that I bought, so that I am able to contact him.                                       |
-| US35       | buyer feedback             | Low      | As a buyer, I want to be able to review and give feedback to the Seller, for each product I buy.                                                       |
-| US36       | buyer Paypal payment       | Low      | As a buyer, I want to be able to pay my purchases using Paypal, so that I use a secure payment method.                                                 |
-
+| Identifier | Name                 | Priority | Description                                                                                                                                            |
+| ---------- | -------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| US17       | Buying Products      | High     | As a buyer, I want to be able to buy a product, so that i own it.                                                                                      |
+| US18       | Buy Cart Items       | Medium   | As a buyer, I want to be able to buy all the products in my shopping cart at once, so that I do not need to buy each one separately.                   |
+| US19       | Seller Feedback      | Medium   | As a buyer, I want to be able to see the seller feedback, so that I know if the seller is trustworthy .                                                |
+| US20       | Transaction Feedback | Medium   | As a buyer, I want to be able to give feedback to the Seller, for each product I buy.                                                                  |
+| US21       | Report the Seller    | Medium   | As a buyer, I want to be able to report a seller I bought a product from and had a problem so that the administrators are made aware of the situation. |
+| US22       | Past Purchases       | Medium   | As a buyer, I want to see my past purchases, so that I know the details of each purchase                                                               |
+| US23       | Contact Seller       | Low      | As a buyer, I want to know the contact of a seller of a product that I bought, so that I am able to contact him.                                       |
+| US24       | Buyer Paypal Payment | Low      | As a buyer, I want to be able to pay my purchases using Paypal, so that I use a secure payment method.                                                 |
 
 ###### Table 5: Buyer's user stories
 
 
 ### 2.5. Seller
 
-| Identifier | Name                    | Priority | Description                                                                                                                                                     |
-| ---------- | ----------------------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| US41       | Choose Product          | High     | As a seller, I want to find the product I want to sell in the plataform database, so that I am able to sell a key for the correct product.                      |
-| US42       | Sell Product            | High     | As a seller, I want to place an offer for a given product, so that I am able to sell it.                                                                        |
-| US43       | Active Offers           | Medium   | As a seller, I want to see the products that I am currently selling, so that I can keep track of the offer's state                                              |
-| US44       | Update Offer            | Medium   | As a seller, I want to update my product's price, so that I can better compete with other sellers                                                  |
-| US45       | Exclude Offer           | Medium   | As a seller, I want to remove a previously published offer, so that I am no longer selling the product.                                                         |
-| US46       | Sales History           | Medium   | As a seller, I want to view all my past sales, so that I can see which products I have sold                                                                     |
-| US47       | Access to buyer contact | Low      | As a seller, I want to access the profile of one of my product's buyer, so that I can obtain his email to contact him                                           |
-| US48       | Reply to a buyer report | Low      | As a seller, I want to reply to a buyer report to a product sold by me, so that administrator can take into account my motives                                  |
-| US49       | Batch Sell              | Low      | As a seller, I want to sell multiple keys of a product at the same time, so that selling multiple keys for the same product is much quicker and easier. |
-| US50       | Seller Paypal payment              | Low      | As a seller, I want to be able to receive payment for my products through Paypal, so that I have a secure money transfer system. |
-
-
+| Identifier | Name                    | Priority | Description                                                                                                                                             |
+| ---------- | ----------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| US25       | Choose Product          | High     | As a seller, I want to find the product I want to sell in the plataform database, so that I am able to sell a key for the correct product.              |
+| US26       | Sell Product            | High     | As a seller, I want to place an offer for a given product, so that I am able to sell it.                                                                |
+| US27       | Active Offers           | Medium   | As a seller, I want to see the products that I am currently selling, so that I can keep track of the offer's state                                      |
+| US28       | Update Offer            | Medium   | As a seller, I want to update my product's price, so that I can better compete with other sellers                                                       |
+| US29       | Exclude Offer           | Medium   | As a seller, I want to remove a previously published offer, so that I am no longer selling the product.                                                 |
+| US30       | Sales History           | Medium   | As a seller, I want to view all my past sales, so that I can see which products I have sold                                                             |
+| US31       | Access to Buyer Contact | Low      | As a seller, I want to access the profile of one of my product's buyer, so that I can obtain his email to contact him                                   |
+| US32       | Reply to a Buyer Report | Low      | As a seller, I want to reply to a buyer report to a product sold by me, so that administrator can take into account my motives                          |
+| US33       | Batch Sell              | Low      | As a seller, I want to sell multiple keys of a product at the same time, so that selling multiple keys for the same product is much quicker and easier. |
+| US34       | Seller Paypal Payment   | Low      | As a seller, I want to be able to receive payment for my products through Paypal, so that I have a secure money transfer system.                        |
+| US35       | Product Discount        | Low      | As a seller, I want to make discounts to my offers, so that it lowers the offers' price during a period of time.                                        |
 ###### Table 6: Seller's user stories
 
 
@@ -112,20 +112,20 @@
 
 | Identifier | Name                     | Priority | Description                                                                                                                        |
 | ---------- | ------------------------ | -------- | ---------------------------------------------------------------------------------------------------------------------------------- |
-| US51       | Product add              | High     | As an admin, I want to be able to add products to the database, so that I can keep the product's list always updated.              |
-| US52       | Admin login              | High     | As an admin, I want to be able to sign in, so that I get administrative privileges                                                 |
-| US53       | User Ban                 | Medium   | As an admin, I want to be able to block users, so that I can keep scammers away from the website                                   |
-| US54       | Product edit             | Medium   | As an admin, I want to be able to edit products in the database, so that the I can change each product information.                |
-| US55       | Access to users' reports | Medium   | As an admin, I want to able to manage reports from users, so that I am able to take action and make the commmunity happier.        |
-| US56       | Admin interface          | Medium   | As an admin, I want to have a different interface, so that I can make changes more quickly and access information more effectively |
-| US57       | Delete Reviews           | Low      | As an admin, I want to be able to delete offensive reviews, so that I can keep the order and respect on the website                |
-| US58       | Product search           | Low      | As an admin, I want to be able to search for games by name, so that I can quickly access them.                                     |
-| US59       | Admin sign out           | Low      | As an admin, I want to be able to sign out, so that I'm no longer logged in.                                                       |
-| US60       | Manage game categories   | Low      | As an admin, I want to be able to add, edit and remove a product category, so that I can better specify a game's category.         |
-| US61       | Manage gaming platforms  | Low      | As an admin, I want to be able to add, edit and remove a gaming platform, so that I can better specify a game's platform.          |
-| US62       | Manage gaming platforms  | Low      | As an admin, I want to be able to add, edit and remove a product genre, so that I can better specify a game's genre.               |
-| US62       | Manage FAQ               | Low      | As an admin, I want to be able to add, edit and remove a question of the FAQ, so that the FAQ is kept up-to-date.                  |
-| US63       | Check Transactions       | Low      | As an admin, I want to be able to see all transactions, so that I can keep track of the website's activity.                        |
+| US36     | Add a Product              | High     | As an admin, I want to be able to add products to the database, so that I can keep the product's list always updated.              |
+| US37     | Admin Login              | High     | As an admin, I want to be able to sign in, so that I get administrative privileges                                                 |
+| US38     | User Ban                 | Medium   | As an admin, I want to be able to block users, so that I can keep scammers away from the website                                   |
+| US39     | Product Edit             | Medium   | As an admin, I want to be able to edit products in the database, so that the I can change each product information.                |
+| US40     | Access to Users' Reports | Medium   | As an admin, I want to able to manage reports from users, so that I am able to take action and make the commmunity happier.        |
+| US41     | Admin Interface          | Medium   | As an admin, I want to have a different interface, so that I can make changes more quickly and access information more effectively |
+| US42     | Delete Reviews           | Low      | As an admin, I want to be able to delete offensive reviews, so that I can keep the order and respect on the website                |
+| US43     | Product Search           | Low      | As an admin, I want to be able to search for games by name, so that I can quickly access them.                                     |
+| US44     | Admin Sign Out           | Low      | As an admin, I want to be able to sign out, so that I'm no longer logged in.                                                       |
+| US45     | Manage Game Categories   | Low      | As an admin, I want to be able to add, edit and remove a product category, so that I can better specify a game's category.         |
+| US46     | Manage Gaming Platforms  | Low      | As an admin, I want to be able to add, edit and remove a gaming platform, so that I can better specify a game's platform.          |
+| US47     | Manage Game Genres  | Low      | As an admin, I want to be able to add, edit and remove a product genre, so that I can better specify a game's genre.               |
+| US48     | Manage FAQ               | Low      | As an admin, I want to be able to add, edit and remove a question of the FAQ, so that the FAQ is kept up-to-date.                  |
+| US49     | Check Transactions       | Low      | As an admin, I want to be able to see all transactions, so that I can keep track of the website's activity.                        |
 
 
 ###### Table 7: Admin's user stories
@@ -133,19 +133,22 @@
 
 ### 2.7. API User
 
-
 | Identifier | Name            | Priority | Description                                                                                                                                          |
 | ---------- | --------------- | -------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
-| AP71       | Search Products | Low      | As an API user, I want to get a list of products that are available, so that I know which ones are available.                                        |
-| AP72       | Search Sellers  | Low      | As an API user, I want to get a list of sellers and their offers for a specific product, so that I can compare the offers of the different sellers. |
-| AP73       | Sell a Product  | Low      | As an API user I want to be able to put an item on sale, so that I can sell that product.                                                             |
-| AP74       | Buy a Product   | Low      | As an API user, I want to buy an offer of a product, so that I own the product.                                                                     |
+| US50    | Search Products | Low      | As an API user, I want to get a list of products that are available, so that I know which ones are available.                                        |
+| US51    | Search Sellers  | Low      | As an API user, I want to get a list of sellers and their offers for a specific product, so that I can compare the offers of the different sellers. |
+| US52    | Sell a Product  | Low      | As an API user I want to be able to put an item on sale, so that I can sell that product.                                                             |
+| US53    | Buy a Product   | Low      | As an API user, I want to buy an offer of a product, so that I own the product.                                                                     |
 
 ###### Table 8: API user's user stories
 
-                                                
+<br/>
+<br/>
+<br/>
+<br/>                        
 
 ## A1. Annex: Supplementary requirements
+
 
 ### A1.1. Business rules
 
@@ -157,16 +160,20 @@
 | BR03       | Review Feedback        | When reviewing a seller a buyer must give positive or negative feedback (thumbs up or down) and has the option to write a message explaining it as well as report the seller.                                  |
 | BR04       | Seller Feedback        | The seller's feedback rating consists of the average of all feedback received from all past sales.                                                                                                             |
 | BR05       | Available Offer        | The buyer will only be able to buy a product if there's at least one seller selling it.                                                                                                                        |
-| BR06       | Seller Ban             | An administrator will have the option to ban a seller should he consider the seller to be putting used keys for sale and because of this negatively impacting the buyer's experience.                          |
+| BR06       | Seller Ban             | An administrator will have the option to ban a seller should he consider the seller to be putting used keys for sale.                                                                                          |
 | BR07       | Product Offer Details  | The number of keys a seller is selling for a product will appear in the details of the offer as well as the seller feedback and the number of sales he has done.                                               |
 | BR08       | Buyer Review Ban       | An administrator will have the option to ban a buyer from reviewing a seller should he consider the buyer to give false reviews.                                                                               |
 | BR09       | User Payment Method    | Should a user not have a payment method saved in his profile when completing a transaction or when putting a product on sale he will be prompted to insert a payment method that will be saved in his profile. |
 | BR10       | Seller Restriction     | A seller cannot buy his an offer that he is currently sellling, and so he cannot make a review about himself.                                                                                                  |
 | BR11       | User Account Deletion  | When a user chooses to delete his account all feedback and profile details are deleted, but all reviews given to sellers are mantained anonymously.                                                            |
 | BR12       | Age Restriction        | User must be at least 18 years old to create an account.                                                                                                                                                       |
-| BR13       | Key Uniqueness         | All redemption keys must be unique and so, when entered in the database and to make sure they are, they will be tested against all other keys in the database.                                                          |
-###### Table 9: Business rules
+| BR13       | Key Uniqueness         | All redemption keys must be unique and so, when entered in the database and to make sure they are, they will be tested against all other keys in the database.                                                 |
+| BR14       | Transaction Fee        | All transactions will impose a 5% fee as commission.|
+| BR15       |Payment Method         | All transactions will be made using PayPal.|
+|BR16|Money Transfer Process| All transactions using PayPal will be directly sent from the buyer to the seller's specified PayPal account without any intermediary.|
 
+
+###### Table 9: Business rules
 
 ### A1.2. Technical requirements
 | Identifier | Name            | Description                                                                                                                                                        |
@@ -194,7 +201,6 @@ The most important technical requirements for this project are:
 
 ### A1.3. Restrictions
 
-
 | Identifier | Name     | Description                                                                                                                   |
 | ---------- | -------- | ---------------------------------------------------------------------------------------------------------------------------- |
 | C01        | Deadline | The system should be ready to be used at the end of the second semester |
@@ -216,4 +222,4 @@ Changes made to the first submission:
 * Ruben Almeida, up201704618@fe.up.pt 
 
 
-###### 2020/02/23
+###### 2020/02/24
