--- a/doc/artifacts/A3.md
+++ b/doc/artifacts/A3.md
@@ -14,7 +14,9 @@ This artefact contains the specification of the horizontal prototype. With the r
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/GGAQDdT.jpg"><img src="https://i.imgur.com/GGAQDdT.jpg"/></a>   |  <a href="https://i.imgur.com/ECQsDAb.png"><img src="https://i.imgur.com/ECQsDAb.png"/></a>
+###### Figure 1: Common Interface.
 
+##### Description:
 ###### 1.Breadcrumb 
 ###### 2.PageLogo
 ###### 3.Search box
@@ -22,7 +24,7 @@ Desktop           |  Mobile
 ###### 5.Product Shortcuts
 ###### 6.Login/Register Area
 ###### 7.Shopping Cart Area
-###### 8.Carousel
+###### 8.Highlights
 ###### 9.Most Popular Products
 ###### 10.Most Recent Products
 ###### 11.Footer
@@ -30,45 +32,46 @@ Desktop           |  Mobile
 
 ## 2. Sitemap
 **Keyshare** is a full responsive web-application based on HTML5, JavaScript and CSS. The frontend was developed using the boostrap4 framework.
-<br>
 
-<a href="https://i.imgur.com/CFknTDU.png"><img src="https://i.imgur.com/CFknTDU.png"/></a>
+
+<a href="https://i.imgur.com/uinmMlI.jpg"><img src="https://i.imgur.com/uinmMlI.jpg"/></a>
+
+###### Figure 2: Sitemap
 
 ## 3. Storyboards
 
-> Storyboards for the main use cases of the system.  
-
-<a href="https://i.imgur.com/nIOIHIt.jpg"><img src="https://i.imgur.com/nIOIHIt.jpg"/></a>
-###### Img 1: Hamburguer Menu Interaction
+<a href="https://i.imgur.com/GmpRf9i.jpg"><img src="https://i.imgur.com/GmpRf9i.jpg"/></a>
+###### Figure 3: Login/Register interaction
 
 <br>
 
-<a href="https://i.imgur.com/WGMVqY7.jpg"><img src="https://i.imgur.com/WGMVqY7.jpg"/></a>
-###### Img 2: Login/Register
-<br>
-
-
-<a href="https://i.imgur.com/shEfBl6.jpg"><img src="https://i.imgur.com/shEfBl6.jpg"/></a>
-###### Img 3: Product Checkout Menu
+<a href="https://i.imgur.com/G0jPtbH.jpg"><img src="https://i.imgur.com/G0jPtbH.jpg"/></a>
+###### Figure 4: Add item to cart interaction
 
 <br>
 
-<!--[](https://i.imgur.com/1hHXoBm.jpg)-->
-<a href="https://i.imgur.com/1hHXoBm.jpg"><img src="https://i.imgur.com/1hHXoBm.jpg"/></a>
-###### Img 4: User Add/Edit Offer
+<a href ="https://i.imgur.com/mEEsONz.jpg"> <img src="https://i.imgur.com/mEEsONz.jpg"></a>
 
-<!--[](https://i.imgur.com/gPvLz26.jpg)-->
-<a href="https://i.imgur.com/gPvLz26.jpg"><img src="https://i.imgur.com/gPvLz26.jpg"/></a>
-###### Img 4: User purchase interactions
+###### Figure 5: Checkout shopping cart interaction
 
-<!--[](https://i.imgur.com/rkVaqe2.jpg)-->
-<a href="https://i.imgur.com/rkVaqe2.jpg"><img src="https://i.imgur.com/rkVaqe2.jpg"/></a>
-###### Img 5: Feedback View
+<br>
 
+<a href="https://i.imgur.com/IABbduD.jpg"><img src="https://i.imgur.com/IABbduD.jpg"/></a>
+###### Figure 6: Add offer interaction
+
+<br>
+
+<a href="https://i.imgur.com/GZMFkXb.jpg"><img src="https://i.imgur.com/GZMFkXb.jpg"/></a>
+###### Figure 7: After purchase user interaction
+
+<br>
+
+<a href="https://i.imgur.com/1ABDxZp.jpg"><img src="https://i.imgur.com/1ABDxZp.jpg"/></a>
+###### Figure 8: View seller feedback
+
+<br>
 
 ## 4. Interfaces
-
-> Screenshots, structured in subsections, including a reference, a description and a URL to the working version.
 
 ### List of Pages(Catalog):
 ###### Homepage
@@ -88,13 +91,26 @@ Desktop           |  Mobile
 ###### Checkout 1 - Your Info
 ###### Checkout 2 - Confirm Your order
 ###### Checkout 3 - Transaction Status
-###### Admin Page
-###### Admin General Page
+###### Admin Page - Dashboard
+###### Admin Page - Login
+###### Admin Page - Products Page
+###### Admin Page - Add Product
+###### Admin Page - Categories Page
+###### Admin Page - Genres Page
+###### Admin Page - Platforms Page
+###### Admin Page - Users Page
+###### Admin Page - Reports Page
+###### Admin Page - Reports Details
+###### Admin Page - Transactions Page
+###### Admin Page - Reviews Page
+###### Admin Page - FAQ Edition Page
+
 
 ### UI01:Homepage
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/KIPB6HY.jpg"><img src="https://i.imgur.com/KIPB6HY.jpg"></a>   |  <a href="https://i.imgur.com/EFmyf9m.png"><img src="https://i.imgur.com/EFmyf9m.png"></a>
+###### Figure 9: Homepage
 
 <a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/homepage.php">Main page</a> of the website where you can see the most popular games and the most recently added.
 
@@ -104,16 +120,15 @@ Desktop           | Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/w1zfGgZ.png"><img src="https://i.imgur.com/w1zfGgZ.png"/></a> |  <a href="https://i.imgur.com/iaj0ZpM.png"><img src="https://i.imgur.com/iaj0ZpM.png"/></a>
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/about.php">About page</a> of the website is where you can learn more about the website's goal.
-
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/about.php">About page</a> of the website is where you can learn more about the website's goal and vision.
+###### Figure 10: About Us
 
 ### UI03: Cart
-
 
 Desktop           | Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/naWFraM.png"><img src="https://i.imgur.com/naWFraM.png"/></a>   |  <a href="https://i.imgur.com/wU7xasq.png"> <img src="https://i.imgur.com/wU7xasq.png"/></a>
-
+###### Figure 11: Cart
 
 <a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/cart.php">Cart page</a> is where you can see the items you have selected for purchase.
 
@@ -122,6 +137,7 @@ Desktop           | Mobile
 Desktop           | Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/6Hyp3g9.png"><img src="https://i.imgur.com/6Hyp3g9.png"/> </a>   |  <a href="https://i.imgur.com/reKMgWp.png"> <img src="https://i.imgur.com/reKMgWp.png"/></a>
+###### Figure 12: FAQ
 
 <a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/faq.php">FAQ page</a> is where you can see the most frequently asked questions and their answers.
 
@@ -130,23 +146,25 @@ Desktop           | Mobile
 Desktop           | Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/0C06v3m.png"><img src="https://i.imgur.com/0C06v3m.png"/></a>   |  <a href="https://i.imgur.com/FPrTXcN.png"><img src="https://i.imgur.com/FPrTXcN.png"/></a>
+###### Figure 13: Contact Us
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/contact.php">Contact page</a> is where you can send an email to us as to be easier to contact the website's administrators.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/contact.php">Contact page</a> is where you can send an email to KeyShare so that it is easier to contact the website's administrators.
 
 ### UI06: Product Searching
 
 Desktop           | Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/lV4BEak.png"><img src="https://i.imgur.com/lV4BEak.png"/></a>   |  <a href="https://i.imgur.com/Z7xCFcN.png"><img src="https://i.imgur.com/Z7xCFcN.png"/></a>
+###### Figure 14: Product Searching
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/products_list.php">Product searching page</a> is where you can find all products and order them by genres, categories, platforms, price range and even sort them.
-
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/products_list.php">Product searching page</a> is where you can find, order and filter all products based on genres, categories, platforms, maximum price, lowest price and release date.
 
 ### UI07: Sign in/up
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/br8uhPq.png"><img src="https://i.imgur.com/br8uhPq.png"></a> | <a href="https://i.imgur.com/5xOk9xa.png"><img src="https://i.imgur.com/5xOk9xa.png"></a> 
+###### Figure 15: Sign In / Sign Out
 
 <a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/homepage.php">Sign in/up popup</a> is where you can log in or register and account to be able to buy and sell products.
 
@@ -154,129 +172,268 @@ Desktop           |  Mobile
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
-<a href="https://i.imgur.com/1mkIMur.png"><img src="https://i.imgur.com/1mkIMur.png"></a> | <a href="https://i.imgur.com/6aYax90.png"><img src="https://i.imgur.com/6aYax90.png"></a>
+<a href="https://i.imgur.com/AAWVaEB.png"><img src="https://i.imgur.com/AAWVaEB.png"></a> | <a href="https://i.imgur.com/6aYax90.png"><img src="https://i.imgur.com/6aYax90.png"></a>
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/offer.php">Add/edit offer page</a> is where you can add or edit the keys you want to sell.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/offer.php">Add/Edit Offer</a> is where you can sell a game. You have to select a game, how many keys you would like to sell, define discount dates and choose the price.
+
+###### Figure 16: Add/Edit Offer
+
 
 ### UI09: Product Page
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/7Hp1bsa.png"> <img src="https://i.imgur.com/7Hp1bsa.png"></a> | <a href="https://i.imgur.com/mUhkFIh.png"><img src="https://i.imgur.com/mUhkFIh.png"></a>
+###### Figure 17: Product Page
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/product.php">Product page</a> is where you can see the details of a product, the offers each seller is putting, the feedback of each seller and also add an offer to you cart.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/product.php">Product page</a> is where you can see the details of a product, the offer each seller is placing, the feedback of each seller and also add an offer to you cart.
 
 
-### UI10: User Page - Profile
+### UI10: User Page - Account - As own user
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
-<a href="https://i.imgur.com/qOhVWnf.png"> <img src="https://i.imgur.com/qOhVWnf.png"></a> | <a href="https://i.imgur.com/vaQUCfv.png"><img src="https://i.imgur.com/vaQUCfv.png"></a>
+<a href="https://i.imgur.com/nsTUsci.png"> <img src="https://i.imgur.com/nsTUsci.png"></a> | <a href="https://i.imgur.com/ryRJ0Xa.png"><img src="https://i.imgur.com/ryRJ0Xa.png"></a>
+###### Figure 18: User Page - Account - As own user
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/user.php">User profile page</a> is where the user can change you email, description and password as well as access you past purchases and all your offers.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/user.php">User profile page</a> is where the user can change his email, description, password, profile picture, see all the feedback he was given and delete his account if he so chooses.
 
-### UI11: User Page - Purchases
+### UI10B: User Page - Account - From another user
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/CqtJcYF.png"><img src="https://i.imgur.com/CqtJcYF.png" ></a> | <a href="https://i.imgur.com/9T0wELc.png"><img src="https://i.imgur.com/9T0wELc.png"></a>
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/bannedUser.php">User profile page from another user</a> is used as the profile page of another user. One user will have the ability to see in this page the profile picture, the email and the description of another user aswell as the feedback given to him.
+###### Figure 19: User Page - Account - From another user
+
+
+### UI10C: User Page - Account - As banned user
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/wuC6gbi.png"><img src="https://i.imgur.com/wuC6gbi.png" ></a> | <a href="https://i.imgur.com/qi3W1iK.png"><img src="https://i.imgur.com/qi3W1iK.png"></a>
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/bannedUser.php">User profile page as banned user</a>
+is almost identical to the regular user page but in this case the user is banned so he has been vetoed from doing certain actions. The user will only be able to change his profile picture and password. He will also still have the option to delete his account or, since he is banned, make one and only one appeal to the admin describing his situation and why the ban should be lifted.
+###### Figure 20: User Page - Profile - As banned user
+
+
+### UI11: User Page - Purchases - As own user
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/YXMnIJM.png"> <img src="https://i.imgur.com/YXMnIJM.png"></a> | <a href="https://i.imgur.com/8eyzLKU.png"><img src="https://i.imgur.com/8eyzLKU.png"></a>
-**Popups in desktop** | **Popups in mobile**
-Key Info | Key Info
-<a href="https://i.imgur.com/thJ3g82.png"> <img src="https://i.imgur.com/thJ3g82.png"></a> | <a href="https://i.imgur.com/PpdHYSt.png"><img src="https://i.imgur.com/PpdHYSt.png"></a>
-Give Feedback | Give Feedback
-<a href="https://i.imgur.com/lN5KdDX.png"> <img src="https://i.imgur.com/lN5KdDX.png"></a> | <a href="https://i.imgur.com/vkExBhM.png"><img src="https://i.imgur.com/vkExBhM.png"></a>
-Report Seller | Report Seller
-<a href="https://i.imgur.com/Zdnnwva.png"> <img src="https://i.imgur.com/Zdnnwva.png"></a> | <a href="https://i.imgur.com/e88seBQ.png"><img src="https://i.imgur.com/e88seBQ.png"></a>
+###### Figure 21: User Page - Purchases - As own user
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userPurchasesPage.php">User purchases page</a> is where the user can view all his past purchases and view the key, give feedback and report the seller.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userPurchasesPage.php">User purchases page</a> is where the user can view all his past purchases, view their keys, give feedback and report sellers.
 
+### UI11B: User Page - Purchases - As banned user
 
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/4QdnThl.png"> <img src="https://i.imgur.com/4QdnThl.png"></a> | <a href="https://i.imgur.com/oPsauFI.png"><img src="https://i.imgur.com/oPsauFI.png"></a>
+###### Figure 22: User Page - Purchases - As banned user
 
-### UI12: User Page - Offers
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userPurchasesPage.php">User purchases page as banned user</a> is where the user can view all his past purchases and view the key, but since he is banned he will not be able to give feedback to sellers or report them.
+
+### UI12: User Page - Offers - As own user
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/cBoxTgY.png"> <img src="https://i.imgur.com/cBoxTgY.png"></a> | <a href="https://i.imgur.com/dIAOn3z.png"><img src="https://i.imgur.com/dIAOn3z.png"></a>
+###### Figure 23:User Page - Offers - As own user
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userOffers.php">User offers page</a> is where the user can view all his current offers and all the one that have been sold as well as choose to edit a current offer.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userOffers.php">User offers page</a> is where the user can view all his current and past offers as well as choose to edit or remove a current offer.
 
-
-### UI13: User Profile as Guest
-
-Desktop           |  Mobile
-:-------------------------:|:-------------------------:
-<a href="https://i.imgur.com/rpkc1Gv.png"><img src="https://i.imgur.com/rpkc1Gv.png" ></a> | <a href="https://i.imgur.com/ZsZNl2y.png"><img src="https://i.imgur.com/ZsZNl2y.png"></a>
-
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/otherUser.php">User profile as guest page</a> is where the user can see the contact and description of the seller as well as <a href="#">his current offers </a> and his feedback.
-
-### UI14: User Offers as Guest
+### UI12B: User Page - Offers - From another user
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/VTlBYWr.png"><img src="https://i.imgur.com/VTlBYWr.png" ></a> | <a href="https://i.imgur.com/3kG0KW6.png"><img src="https://i.imgur.com/3kG0KW6.png"></a>
+###### Figure 24: User Page - Offers - From another user
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/otherUserOffers.php">User offers as guest page</a> is where the user can see the seller's current offers.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/otherUserOffers.php">User offers from another user</a> is where the user can see another user's current offers if he has any.
 
+### UI12C: User Page - Offers - As banned user
 
-### UI14: Checkout 1 - Your Info
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/JCDnEIx.png"><img src="https://i.imgur.com/JCDnEIx.png" ></a> | <a href="https://i.imgur.com/mQo9twk.png"><img src="https://i.imgur.com/mQo9twk.png"></a>
+###### Figure 25: User Page - Offers - As banned user
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/otherUserOffers.php">User offers  page as banned user</a> is where the user can see his past and current offers but since he is banned he  will not be able to edit his current offers only delete them. Also it is shown to him that his current offers no longer appear in the website as purchasable products instead they only remain in his current offers section in case he is unbanned from which point on, if that happens, all current offers will start appearing again as purchasable products.
+
+### UI13: User Page - Reports
+
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/Xqjej9J.png"><img src="https://i.imgur.com/Xqjej9J.png" ></a> | <a href="https://i.imgur.com/l4OK9jc.png"><img src="https://i.imgur.com/l4OK9jc.png"></a>
+###### Figure 26: User Page - Reports 
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/userOffers.php">User reports page</a> is where the user can view all his reports agaisnt sellers and see reports that were made against him from buyers.
+
+### UI14: Report - Report Details
+
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/Ag7h9AP.png"><img src="https://i.imgur.com/Ag7h9AP.png" ></a> | <a href="https://i.imgur.com/xfosGxb.png"><img src="https://i.imgur.com/xfosGxb.png"></a>
+###### Figure 27: Checkout - Your Info
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout.php?page=1">Report page</a> is a dedicated page where a buyer who reported a seller can discuss with that seller and an admin in order to solve the situation.  A seller is able to defend himself if he feels he is being wronged. An admin will take the final say in what happens.
+
+### UI15: Checkout - Your Info
 
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/ZD8OcXG.png"><img src="https://i.imgur.com/ZD8OcXG.png" ></a> | <a href="https://i.imgur.com/j5JvZmz.png"><img src="https://i.imgur.com/j5JvZmz.png"></a>
+###### Figure 28: Checkout - Your Info
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout1.php">Checkout stage 1</a> is where the user inserts more information regarding billing the purchase.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout.php?page=1">Checkout stage 1</a> is where the user inserts more information regarding billing the purchase.
 
-
-### UI15: Checkout 2 - Confirm Your Order
-
+### UI16: Checkout - Confirm Your Order
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/TPDCGxI.png"><img src="https://i.imgur.com/TPDCGxI.png" ></a> | <a href="https://i.imgur.com/56sBEnT.png"><img src="https://i.imgur.com/56sBEnT.png"></a>
+###### Figure 29: Checkout - Confirm Your Order
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout2.php">Checkout stage 2</a> is where the user can view the details of the purchase he is about to make and proceed to pay for the items.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout.php?page=2">Checkout stage 2</a> is where the user can view the details of the purchase he is about to make and proceed to pay for the items.
 
 
-### UI16: Checkout 3 - Transaction Status
-
+### UI17: Checkout - Transaction Status
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
 <a href="https://i.imgur.com/p0Ba58Q.png"><img src="https://i.imgur.com/p0Ba58Q.png" ></a> | <a href="https://i.imgur.com/dTOl1Lo.png"><img src="https://i.imgur.com/dTOl1Lo.png"></a>
+###### Figure 30: Checkout - Transaction Status
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout3.php">Checkout stage 3</a> is where the user can see if the payment was accepted and return to homepage.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/checkout.php?page=3">Checkout stage 3</a> is where the user can see if the payment was accepted and return to his past purchases page to see the key or keys he just bought.
 
 
-### UI16: Admin Page
-
+### UI18: Admin Page - Dashboard
 Desktop           |  Mobile
 :-------------------------:|:-------------------------:
-<a href="https://i.imgur.com/cC9A3Fa.png"><img src="https://i.imgur.com/cC9A3Fa.png" ></a> | <a href="https://i.imgur.com/11GIdVb.png"><img src="https://i.imgur.com/11GIdVb.png"></a>
+<a href="https://i.imgur.com/c4iruFV.png"><img src="https://i.imgur.com/c4iruFV.png" ></a> | <a href="https://i.imgur.com/4Pju1L2.png"><img src="https://i.imgur.com/4Pju1L2.png"></a>
+###### Figure 31: Admin Page - Dashboard
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_home.php">Admin home page</a> is the admin's main page where he can see overall details and navigate to other pages.
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php">Admin Dashboard</a> is the admin's main page where he can see overall details and navigate to other pages.
 
 
-### UI17: Admin general page
-Desktop           |
-:-------------------------:
-<a href="https://i.imgur.com/Aw1Kz6I.png"><img src="https://i.imgur.com/Aw1Kz6I.png"></a> |
+### UI19: Admin Page - Login
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/8t4m9Cm.png"><img src="https://i.imgur.com/8t4m9Cm.png"></a>  | <a href="https://i.imgur.com/8K1lr2t.png"><img src="https://i.imgur.com/8K1lr2t.png"></a>
 
-<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_skeleton_page.php">Admin general page</a> is the admin's general page where he can manipulate and change all the details regarding the products and users.
+###### Figure 32: Admin Page - Login
 
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_login.php">Admin login page</a> is going to be used by the admin to authenticate himself so he can acess his interface to make changes in the website
+
+
+### UI20: Admin Page - Products Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/dJH4eSE.png"><img src="https://i.imgur.com/dJH4eSE.png"></a> | <a href="https://i.imgur.com/LnEZO55.png"><img src="https://i.imgur.com/LnEZO55.png"></a>
+
+###### Figure 33: Admin Page - Products Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=0">Admin products page</a> is used by the admin to manage the products on the website. The admin will be able add, edit and remove products from the website.
+
+### UI21: Admin Page - Add/Edit Product
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/vMUvLwG.png"><img src="https://i.imgur.com/vMUvLwG.png"></a>  | <a href="https://i.imgur.com/DEMdZi8.png"><img src="https://i.imgur.com/DEMdZi8.png"></a>
+###### Figure 34: Admin Page - Add Product
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_product_edit.php">Admin add/edit product page</a> is where the admin will either edit a previous product already on the website or add a new product. When the user is done filling out or editing the necessary information we will be able to submit those changes to the website  
+
+### UI22: Admin Page - Categories Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/hnjH5Ts.png"><img src="https://i.imgur.com/hnjH5Ts.png"></a> | <a href="https://i.imgur.com/Tj1So7F.png"><img src="https://i.imgur.com/Tj1So7F.png"></a>
+###### Figure 35: Admin Page - Categories Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=1">Admin categories page</a> will be used by the admin to manage the game categories on the website. The admin will have the option to add, edit, delete and search a category. 
+
+
+### UI23: Admin Page - Genres Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/ecmDgd6.png"><img src="https://i.imgur.com/ecmDgd6.png"></a> | <a href="https://i.imgur.com/26HnoNk.png"><img src="https://i.imgur.com/26HnoNk.png"></a>
+###### Figure 36: Admin Page - Genres Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=2">Admin genres page</a> will be used by the admin to manage the game genres on the website. The admin will have the option to add, edit, delete and search a genre. 
+
+### UI24: Admin Page - Platforms Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/XJsmDZh.png"><img src="https://i.imgur.com/XJsmDZh.png"></a> | <a href="https://i.imgur.com/GERmN15.png"><img src="https://i.imgur.com/GERmN15.png"></a>
+###### Figure 37: Admin Page - Platforms Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=3">Admin categories page</a> will be used by the admin to manage the gaming categories on the website. The admin will have the option to add, edit delete and search a categorie. 
+
+### UI25: Admin Page - Users Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/ffVUvLl.png"><img src="https://i.imgur.com/ffVUvLl.png"></a> | <a href="https://i.imgur.com/0yQ1XAb.png"><img src="https://i.imgur.com/0yQ1XAb.png"></a>
+###### Figure 38: Admin Page - Users Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=4">Admin users page</a> will be used by the admin to manage the users of the website. The admin will have the option to search for users, ban or unban them.
+
+### UI26: Admin Page - Reports Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/kCaeakd.png"><img src="https://i.imgur.com/kCaeakd.png"></a> | <a href="https://i.imgur.com/yeOICEr.png"><img src="https://i.imgur.com/yeOICEr.png"></a>
+###### Figure 39: Admin Page - Reports Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=6">Admin reports page </a> will be used to search for reports from users, when the admin whishes to see more details or/and take action about a specific report he will be able to do it by pressing the "more details" button next to each report which will take him to a page dedicated to that specific report.
+
+
+### UI27: Admin Page - Reports Details
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/eJS3i1z.png"><img src="https://i.imgur.com/eJS3i1z.png"></a> | <a href="https://i.imgur.com/ZM20bGS.png"><img src="https://i.imgur.com/ZM20bGS.png"></a>
+###### Figure 40: Admin Page - Reports Details
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin_report_page.php">Admin reports details</a> is going to be used by the admin to manage a specific report.  A report is always submitted by a buyer against a particular seller because of this the admin, the seller and the buyer will be able to comunicate through a chat in the page in order to solve the issue. The admin will also have at his disposal the options to ban the buyer or/and the seller and to arquive the Report.
+
+### UI28: Admin Page - Transactions Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/LaC0NMn.png"><img src="https://i.imgur.com/LaC0NMn.png"></a> | <a href="https://i.imgur.com/CHkxMxe.png"><img src="https://i.imgur.com/CHkxMxe.png"></a>
+###### Figure 41: Admin Page - Transactions Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=7">Admin transactions page</a> will be used by the admin to see all transactions between sellers and buyers and to see more details about them. 
+
+### UI29: Admin Page - Reviews Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/OBdrTTN.png"><img src="https://i.imgur.com/OBdrTTN.png"></a> | <a href="https://i.imgur.com/ND6fD88.png"><img src="https://i.imgur.com/ND6fD88.png"></a>
+###### Figure 42: Admin Page - Reviews Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=8">Admin reviews page</a> is the page where the admin will see all the reviews (feedbacks) given to all the sellers by the buyers. The admin will be able to search for a reviews, see their content (comment) and finnaly to delete them if he finds them to be inappropriate.
+
+### UI30: Admin Page - FAQ Edition Page
+Desktop           |  Mobile
+:-------------------------:|:-------------------------:
+<a href="https://i.imgur.com/h3Ns1V3.png"><img src="https://i.imgur.com/h3Ns1V3.png"></a> | <a href="https://i.imgur.com/jtt8I4S.png"><img src="https://i.imgur.com/jtt8I4S.png"></a>
+###### Figure 43: Admin Page - FAQ Edition Page
+
+<a href="http://lbaw2043-piu.lbaw-prod.fe.up.pt/src/pages/admin.php?page=9">Admin FAQ edition Page </a> will be used by the admin to see the questions that appear on the website's FAQ page. The admin will be able to add, edit or remove questions and their respective answers.
 
 ## A1. Annexes
 
-###### Paper Wireflows
 <a href="https://i.imgur.com/07KoWBy.jpg"><img src="https://i.imgur.com/07KoWBy.jpg"></a>
 
+###### Figure 44: Wireflows
 
 ## Revision history
 
-First submission date: 2020/03/12
-
+First submission date: 2020/03/22
+* Sitemap has now page stacks
+* Storyboards represent only the main interactions and captions have been added
+* Added admin pages
+* User pages as banned user
+* User pages as buyer
 ***
 ### Team: 43
 * Luís Ramos, up201706253@fe.up.pt (Editor)
 * José Guerra, up201706421@fe.up.pt
 * Martim Silva, up201705205@fe.up.pt
 * Ruben Almeida, up201704618@fe.up.pt 
-
-###### 2020/03/12
