--- a/doc/artifacts/A4.md
+++ b/doc/artifacts/A4.md
@@ -8,7 +8,7 @@ In the fourth artefact, the focus was designing the UML diagram for the relation
 * Clarify new Business Rules and refine the ones already especified in Artifact 3.
 
 ## 1. Class diagram
-<a href="https://i.imgur.com/M7zC2Bb.png"><img src="https://i.imgur.com/M7zC2Bb.png"/></a>
+<a href="https://i.imgur.com/Xn0jgrk.png"><img src="https://i.imgur.com/Xn0jgrk.png"/></a>
 ###### Figure 1: UML Class Diagram
 
 
@@ -19,17 +19,30 @@ In the fourth artefact, the focus was designing the UML diagram for the relation
 
 | Business Rule ID | Description | 
 | -------- | -------- | 
-| BR01     | When an admin wants to delete a product, if atleast one user has already bought a key for that product, the product is not deleted and instead is moved to the class **deleted product**|
+| BR01     | When an admin wants to delete a product, if at least one user has already bought a key for that product, the product is not deleted and instead is moved to the class **deleted product**|
 ###### Table1: Additional Business Rules
 
 
 ## Revision history
 
-Changes made to the first submission:
+First submission: 19/03/2020
+
+Changes made to the first submission: 23/03/2020
+* Made Deleted Product a subclass of Product
+* Added Active Product as a subclass of Product
+* Added a restriction to Offer 
+* Joined arrows of User subclasses
+* Fixed mispelling and arranged classes
+* Added Cart class
+* Added Ban Appeal class
+* Added missing multiplicities
+
+Changes made to the second submission: 27/03/2020
+* Changed multiplicities regarding users, due to delete operations problems found in a5
 
 
 ***
-GROUP2043, 19/03/2020
+GROUP2043, 27/03/2020
  
 * Luís Ramos, up201706253@fe.up.pt
 * José Guerra, up201706421@fe.up.pt
