--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -3602,6 +3602,11 @@ By the end of the seventh iteration, it will be already established:
         <td colspan="4">GET</td>
     </tr>
     <tr>
+        <td colspan="2" rowspan="1">Parameters</td>
+        <td colspan="2">+id: integer</td>
+        <td colspan="2">ID of the report</td>
+    </tr>
+    <tr>
         <td colspan="2">UI13</td>
         <td colspan="4">User Page - Reports</td>
     </tr>
