--- a/doc/artifacts/A7.md
+++ b/doc/artifacts/A7.md
@@ -1021,7 +1021,7 @@ By the end of the seventh iteration, it will be already established:
 
 ---
 
-#### R304: Products Search
+#### R304: Products Search Action
 <table id = "r307">
   <tr>
     <td colspan="2">URL</td>
